--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             </div>
         </div>
         <div>
-            <img src="/image/marketing-strategy 1.png" alt="">
+            <img src="/image/marketingstrategy.png" alt="">
         </div>
     </section>
     <section class="mx-auto">
-        <img class="mx-auto" src="/image/Logos.png" alt="">
+        <img class="mx-auto" src="/image/buttons.png" alt="">
     </section>
 
     <section class="flex w-4/5 mx-auto my-30 items-center space-x-4">
@@ -62,15 +62,15 @@
                 critical development work, eliminate toil, and deploy changes with ease.</p>
             <div class="border-t border-gray-300 my-8"></div>
             <div class="flex items-center">
-                <img src="/image/check-circle.png" alt="">
+                <img src="/image/checkcircle.png" alt="">
                 <h1>Continuous integration and deployment</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/check-circle.png" alt="">
+                <img src="/image/checkcircle.png" alt="">
                 <h1>Development workflow</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/check-circle.png" alt="">
+                <img src="/image/checkcircle.png" alt="">
                 <h1>Knowledge management</h1>
             </div>
             <p class="mt-5">Deliver great service experiences fast - without the complexity of traditional ITSM
@@ -84,7 +84,7 @@
 
     <section class="flex w-4/5 mx-auto my-30 items-center space-x-4 ">
         <div>
-            <img src="/image/Image (1).png" alt="">
+            <img src="/image/Image1.png" alt="">
         </div>
         <div class="w-1/2">
             <h1 class="font-bold text-4xl">We invest in the world’s potential</h1>
@@ -92,23 +92,23 @@
                 critical development work, eliminate toil, and deploy changes with ease.</p>
             <div class="border-t border-gray-300 my-8"></div>
             <div class="flex items-center">
-                <img src="/image/check-circle.png" alt="">
+                <img src="/image/checkcircle.png" alt="">
                 <h1>Dynamic reports and dashboards</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/check-circle.png" alt="">
+                <img src="/image/checkcircle.png" alt="">
                 <h1>Templates for everyone</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/check-circle.png" alt="">
+                <img src="/image/checkcircle.png" alt="">
                 <h1>Development workflow</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/check-circle.png" alt="">
+                <img src="/image/checkcircle.png" alt="">
                 <h1>Dynamic reports and dashboards</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/check-circle.png" alt="">
+                <img src="/image/checkcircle.png" alt="">
                 <h1>Templates for everyone</h1>
             </div>
 
