--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
                 solutions.</p>
         </div>
         <div>
-            <img src="/image/Image.png" alt="">
+            <img src="/image/picture.png" alt="">
         </div>
 
     </section>
 
     <section class="flex w-4/5 mx-auto my-30 items-center space-x-4 ">
         <div>
-            <img src="/image/Image1.png" alt="">
+            <img src="/image/picture1.png" alt="">
         </div>
         <div class="w-1/2">
             <h1 class="font-bold text-4xl">We invest in the world’s potential</h1>
