--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <button class=" rounded-md border-red-400">Pricing & FAQ</button>
             </div>
         </div>
-        <div>
-            <img src="/image/marketingstrategy.png" alt="">
+        <div> 
+            <img src="/image/marketingstrategy.png" alt="marketingstrategy">
         </div>
     </section>
     <section class="mx-auto">
