--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                 <button class=" rounded-md border-red-400">Pricing & FAQ</button>
             </div>
         </div>
-        <div> 
-            <img src="/image/marketingstrategy.png" alt="marketingstrategy">
+        <div>
+            <img src="image/marketingstrategy.png" alt="">
         </div>
     </section>
     <section class="mx-auto">
-        <img class="mx-auto" src="/image/buttons.png" alt="">
+        <img class="mx-auto" src="image/buttons.png" alt="">
     </section>
 
     <section class="flex w-4/5 mx-auto my-30 items-center space-x-4">
@@ -62,29 +62,29 @@
                 critical development work, eliminate toil, and deploy changes with ease.</p>
             <div class="border-t border-gray-300 my-8"></div>
             <div class="flex items-center">
-                <img src="/image/checkcircle.png" alt="">
+                <img src="image/checkcircle.png" alt="">
                 <h1>Continuous integration and deployment</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/checkcircle.png" alt="">
+                <img src="image/checkcircle.png" alt="">
                 <h1>Development workflow</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/checkcircle.png" alt="">
+                <img src="image/checkcircle.png" alt="">
                 <h1>Knowledge management</h1>
             </div>
             <p class="mt-5">Deliver great service experiences fast - without the complexity of traditional ITSM
                 solutions.</p>
         </div>
         <div>
-            <img src="/image/picture.png" alt="">
+            <img src="image/picture.png" alt="">
         </div>
 
     </section>
 
     <section class="flex w-4/5 mx-auto my-30 items-center space-x-4 ">
         <div>
-            <img src="/image/picture1.png" alt="">
+            <img src="image/picture1.png" alt="">
         </div>
         <div class="w-1/2">
             <h1 class="font-bold text-4xl">We invest in the world’s potential</h1>
@@ -92,23 +92,23 @@
                 critical development work, eliminate toil, and deploy changes with ease.</p>
             <div class="border-t border-gray-300 my-8"></div>
             <div class="flex items-center">
-                <img src="/image/checkcircle.png" alt="">
+                <img src="image/checkcircle.png" alt="">
                 <h1>Dynamic reports and dashboards</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/checkcircle.png" alt="">
+                <img src="image/checkcircle.png" alt="">
                 <h1>Templates for everyone</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/checkcircle.png" alt="">
+                <img src="image/checkcircle.png" alt="">
                 <h1>Development workflow</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/checkcircle.png" alt="">
+                <img src="image/checkcircle.png" alt="">
                 <h1>Dynamic reports and dashboards</h1>
             </div>
             <div class="flex items-center">
-                <img src="/image/checkcircle.png" alt="">
+                <img src="image/checkcircle.png" alt="">
                 <h1>Templates for everyone</h1>
             </div>
 
